# treklibs

./: .clang_complete  .gitignore  CMakeLists.txt
trek/common/: CMakeLists.txt  applog.cpp  applog.hpp  assertion.hpp  callback.hpp  enumcontainer.hpp  filesize.cpp  filesize.hpp  pipe.hpp  serialization.hpp  streamsize.cpp  streamsize.hpp  stringbuilder.hpp  threadmanager.cpp  threadmanager.hpp  timeprint.hpp
trek/data/: CMakeLists.txt  ctudcrecord.cpp  ctudcrecord.hpp  dataset.cpp  dataset.hpp  datasetheader.cpp  datasetheader.hpp  eventrecord.cpp  eventrecord.hpp  hitrecord.cpp  hitrecord.hpp  nevod.hpp  structs.hpp  tdcrecord.cpp  tdcrecord.hpp  tdcsettings.cpp  tdcsettings.hpp
trek/math/: CMakeLists.txt  coordsystem.cpp  coordsystem.hpp  general.hpp  hexahedron.cpp  hexahedron.hpp  histogram.cpp  histogram.hpp  line2.cpp  line2.hpp  line3.cpp  line3.hpp  octahedron.cpp  octahedron.hpp  plane.cpp  plane.hpp  quadrangle2.cpp  quadrangle2.hpp  quadrangle3.cpp  quadrangle3.hpp  vec2.cpp  vec2.hpp  vec3.cpp  vec3.hpp
trek/net/: CMakeLists.txt  client.cpp  client.hpp  controller.cpp  controller.hpp  ctudccontroller.cpp  ctudccontroller.hpp  jcontroller.cpp  jcontroller.hpp  multicastreceiver.cpp  multicastreceiver.hpp  multicastsender.cpp  multicastsender.hpp  request.cpp  request.hpp  response.cpp  response.hpp  server.cpp  server.hpp  session.cpp  session.hpp
trek/utils/: CMakeLists.txt  chamber.cpp  chamber.hpp  chamberhandler.cpp  chamberhandler.hpp  trekhandler.cpp  trekhandler.hpp  trektypes.hpp
